tools/extensionserver/envoy.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 8081
    traffic_direction: INBOUND
    filter_chains:
    - filters:
      - name: inbound-http-proxy
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: backend
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                direct_response:
                  status: 200
                  body:
                    inline_string: "hello, world!\n"
          http_filters:
          - name: metadata_exchange
            config_discovery:
              config_source:
                api_config_source:
                  api_type: GRPC
                  transport_api_version: V3
                  grpc_services:
                  - envoy_grpc:
                      cluster_name: xds_cluster
              type_urls: ["envoy.extensions.filters.http.wasm.v3.Wasm"]
          - name: front-router
            typed_config:
              "@type": type.googleapis.com/envoy.config.filter.http.router.v2.Router
  clusters:
  - connect_timeout: 1s
    http2_protocol_options: {}
    name: xds_cluster
    load_assignment:
      cluster_name: xds_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 8080
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
node:
  id: test
  cluster: test
